# w

./: .gitattributes  .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  .typos.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  ISSUE.md  NOTICE  PRD.md  README.md  TODO.md  config.example.toml  dist-workspace.toml  progress.md  ralph-loop.sh
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/hooks/: hooks.json
.claude/rules/: caching-strategy.md  cli-output-formatting.md  output-system-architecture.md
.config/: lychee.toml  nextest.toml  wt.example.toml  wt.toml
.github/workflows/: ci.yaml  ci.yml  claude-ci-fix.yaml  claude-mention.yaml  pages.yml  publish-docs.yaml  release.yml  tier-2-integration-tests.yml
Formula/: w.rb
benches/: CLAUDE.md  cow_copy.rs
crates/w/: Cargo.toml
crates/w/src/: main.rs  repo.rs
crates/w/tests/: cd.rs  ls.rs  new.rs  prune.rs  repo_index.rs  rm.rs  run.rs  shell_init.rs  switch.rs
dev/: config.example.toml  fetch-assets  publish-assets  setup-claude-code-web.sh  wt-demo-build.py
dev/wt-demo/: CLAUDE.md
docs/: CLAUDE.md  config.toml
docs/content/: _index.md  attribution.md  claude-code.md  commands.md  config.md  configuration.md  demo.md  faq.md  hook.md  how-it-works.md  install.md  list.md  llm-commits.md  llms.md  merge.md  quickstart.md  remove.md  select.md  step.md  switch.md  tips-patterns.md  why-worktrunk.md  worktrunk.md
docs/demos/: CLAUDE.md  build
docs/sass/: custom.scss
docs/static/: style.css
docs/templates/: base.html  index.html  page.html  section.html
scripts/: update_homebrew_formula.py
snapshots/: test_directives__finish_internal_directive.snap  test_directives__finish_without_internal.snap  test_directives__switch_internal_directive.snap  test_directives__switch_without_internal.snap  test_init__init_bash.snap  test_init__init_bash_all_options.snap  test_init__init_bash_custom_prefix.snap  test_init__init_bash_prompt_hook.snap  test_init__init_fish.snap  test_init__init_fish_prompt_hook.snap  test_init__init_invalid_hook.snap  test_init__init_invalid_shell.snap  test_init__init_zsh.snap  test_list__detached_head.snap  test_list__locked_no_reason.snap  test_list__locked_worktree.snap  test_list__multiple_worktrees.snap  test_list__single_worktree.snap
src/: cli.rs  completion.rs  config.rs  diagnostic.rs  display.rs  git.rs  help.rs  lib.rs  llm.rs  main.rs  md_help.rs  path.rs  shell.rs  shell_exec.rs  styling.rs  utils.rs  verbose_log.rs
src/cli/: config.rs  hook.rs  mod.rs  step.rs
src/commands/: CLAUDE.md  branch_deletion.rs  command_approval.rs  command_executor.rs  commit.rs  config.rs  configure_shell.rs  context.rs  dev.rs  for_each.rs  hook_commands.rs  hooks.rs  init.rs  merge.rs  mod.rs  process.rs  project_config.rs  repository_ext.rs  select.rs  standalone.rs  statusline.rs  step_commands.rs  worktree.rs
src/config/: commands.rs  deprecation.rs  expansion.rs  mod.rs  project.rs  user.rs
src/git/: error.rs  mod.rs  mr_ref.rs  pr_ref.rs  url.rs
src/output/: commit_generation.rs  directive.rs  global.rs  handlers.rs  interactive.rs  mod.rs  prompt.rs  shell_integration.rs
src/shell/: detection.rs  mod.rs
src/snapshots/: worktrunk__shell__tests__init_powershell.snap
src/styling/: constants.rs  format.rs  highlighting.rs  mod.rs
src/trace/: chrome.rs  mod.rs  parse.rs
templates/: bash.sh  elvish.elv  fish.fish  nushell.nu  posix_directives.sh  powershell.ps1  xonsh.xsh  zsh.zsh
tests/: CLAUDE.md  git_error_display.rs  test_directives.rs  test_init.rs  test_list.rs
tests/common/: list_snapshots.rs  mock_commands.rs  mod.rs  progressive_output.rs  shell.rs
tests/helpers/dev-detach/: Cargo.toml
tests/helpers/dev-detach/src/: main.rs
tests/helpers/dev-detach/tests/: builds.rs
tests/helpers/mock-stub/: Cargo.toml
tests/helpers/mock-stub/src/: main.rs
tests/helpers/mock-stub/tests/: builds.rs
tests/integration_tests/: .post_start_commands.rs.pending-snap  analyze_trace.rs  approval_pty.rs  approval_save.rs  approval_ui.rs  approvals.rs  bare_repository.rs  ci_status.rs  column_alignment_verification.rs  completion.rs  completion_validation.rs  config_cache.rs  config_init.rs  config_list.rs  config_show.rs  config_state.rs  configure_shell.rs  default_branch.rs  diagnostic.rs  directives.rs  e2e_shell.rs  (+24 more)
(+637 files in other folders)
