[package]
name = "worktrunk"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
# Enable testing for shells that require extra installation steps (nushell, powershell, elvish, xonsh, oil)
tier-2-integration-tests = []

[lib]
name = "worktrunk"
path = "src/lib.rs"

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
anstream = "0.6"
anstyle = "1.0"
askama = { version = "0.14", default-features = false, features = ["derive", "std"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
config = "0.15"
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
vergen-gitcl = { version = "1.0.0", features = ["build"] }

[dev-dependencies]
insta = { version = "1.40", features = ["yaml", "redactions", "filters"] }
insta-cmd = "0.6"
assert_cmd = "2.0"
tempfile = "3.14"
toml = "0.8"
rstest = "0.23"
criterion = "0.5"

[[bench]]
name = "completion"
harness = false
