[package]
name = "w"
version = "0.1.0"
description = "Multi-repo wrapper for Worktrunk (experimental)"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.32", features = ["derive"] }
worktrunk = { path = "../../vendor/worktrunk", default-features = false }

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.17.1"
